feat: add java build, and various fixes for node client for compatability